crux-mir-comp/test/symb_eval/cryptol/size_poly_err4.rs
extern crate crucible;
use crucible::*;

#[crux::test]
fn test() {
    let f: fn(usize,usize,&[u8]) -> u8 = cryptol::load("Cryptol", "sum");
}